--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>traffic</title>
+<style type="text/css">
+body,td,th {
+    font-family: "微软雅黑";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: #FFFFFF;
+}
+body {
+    background-image: url(background.png);
+    background-repeat: no-repeat;
+}
+</style>
+</head>
 
+<body>
+<a href="traffic-1.html"><img src="button.png" width="442" height="413" alt=""/></a>
+</body>
+</html>
